ship particles refactoring